# LightField

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ConstructLightFieldTexture/: Main.cpp
LightField/: LFNode.cpp  LFNode.h  LightField.cpp  LightField.h  Main.cpp
LightField/rectified/: light_field_dictionary.py
LightFieldCamera/: LightFieldCamera.cpp
LightFieldTexture/: Main.cpp
LightFieldViewer/: CMakeLists.txt  LightFieldViewer.cpp  LightFieldViewer.h  Main.cpp  glsl.frag  glsl.vert  lightfield.frag  lightfield.vert
VirtualLFCamera/: VirtualLFCamera.cpp  VirtualLFCamera.h
data/: download.py
shaders/: lightfield.frag  lightfield.vert
src/: CMakeLists.txt
src/shaders/: lightfield.frag  lightfield.vert
src/viewer/: directories.h.in  imageinfo.h  light_field_widget.cpp  light_field_widget.h  main.cpp  maingui.cpp  maingui.h
viewer/: CMakeLists.txt  appmain.cpp  directories.h  directories.h.in  image_info.h  light_field_widget.cpp  light_field_widget.h  main_interface.cpp  main_interface.h
